--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_URI=mongodb+srv://root:<db_password>@cluster0.51quq.mongodb.net/
+DB_URI=mongodb+srv://root:L8NlkLoqabF3jAhW@cluster0.51quq.mongodb.net/
 
 PORT=5000
 
